--- a/Homework.html
+++ b/Homework.html
@@ -10,7 +10,7 @@
 <div>
 <h3>Seasons</h3>
     <ol>
-        <li class="s1">Winter
+        <li>Winter
             <ul class="winter">
                 <li>December</li>
                 <li>January</li>
